# boost_chat

./: Block.cpp  Blockchain.cpp  CMakeLists.txt  main.cpp
chat_client/: CMakeLists.txt  main.cpp
include/: Block.h  Blockchain.h  TransactionData.h
